--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
+    "@supabase/supabase-js": "^2.39.1",
     "next": "14.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@supabase/supabase-js": "^2.39.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
+    "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
-    "@types/node": "^20.5.9"
+    "typescript": "^5.2.2"
   }
 }
