--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
     "@supabase/supabase-js": "^2.39.1",
-    "next": "14.0.3",
+    "next": "^14.2.33",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
